# ilhook-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
.circleci/: config.yml
.github/workflows/: rust.yml
src/: callbacks.rs  err.rs  lib.rs  utils.rs  x64.rs  x86.rs
src/x64/: fixed_memory.rs  fixed_memory_unix.rs  fixed_memory_win.rs  move_inst.rs  tests.rs  trampoline.rs
src/x86/: tests.rs  trampoline.rs
