[package]
name = "ilhook"
description = "A library that provides methods to inline hook binary codes in x86 and x86_64 architecture"
version = "1.0.0"
authors = ["regomne <fallingsunz@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/regomne/ilhook-rs"
keywords = ["hook", "assemble", "disassemble"]
categories = ["hardware-support"]

[dependencies]
iced-x86 = { version = "1.10", default-features = false, features = ["std", "decoder", "block_encoder"] }
thiserror = "1.0"
bitflags = "1.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
regex = "1"
lazy_static = "1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["memoryapi", "minwindef", "errhandlingapi", "winnt"] }
